Сделал форму создания статьи, сделал красивый выпадающий alert, валидацию формы и подготовил файлы к созданию компонента таблицы статей

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "naive-ui": "^2.35.0"
   },
   "browserslist": [
     "> 1%",
